--- a/teams.html
+++ b/teams.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/teams.css">
   <link rel="stylesheet" media="all" href="VectorMap/jquery-jvectormap.css"/>
   <script src="js/teamsContent.js"></script>
+  <script src="js/teamsInfoAPI.js"></script>
   <script src="js/teams.js"></script>
 
   <script src="VectorMap/assets/jquery-1.8.2.js"></script>
@@ -67,28 +68,27 @@
       <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
     </ul>
     <div class="hidden">   <!--div para pre-load todas as mini_flag!-->
-      <img src="Flags/flags_mini/argentina_mini.png"> <!--flag tem width:25px!-->
-      <img src="Flags/flags_mini/belgium_mini.png">
-      <img src="Flags/flags_mini/brasil_mini.png">
-      <img src="Flags/flags_mini/chile_mini.png">
-      <img src="Flags/flags_mini/china_mini.png">
-      <img src="Flags/flags_mini/colombia_mini.png">
-      <img src="Flags/flags_mini/ecuador_mini.png">
-      <img src="Flags/flags_mini/england_mini.png">
-      <img src="Flags/flags_mini/france_mini.png">
-      <img src="Flags/flags_mini/germany_mini.png">
-      <img src="Flags/flags_mini/greece_mini.png">
-      <img src="Flags/flags_mini/italy_mini.png">
-      <img src="Flags/flags_mini/mexico_mini.png">
-      <img src="Flags/flags_mini/netherlands_mini.png">
-      <img src="Flags/flags_mini/paraguay_mini.png">
-      <img src="Flags/flags_mini/portugal_mini.png">
-      <img src="Flags/flags_mini/spain_mini.png">
-      <img src="Flags/flags_mini/sweden_mini.png">
-      <img src="Flags/flags_mini/switzerland_mini.png">
-      <img src="Flags/flags_mini/uk_mini.png">
-      <img src="Flags/flags_mini/uruguay_mini.png">
-      <img src="Flags/flags_mini/usa_mini.png">
+      <img src="Flags/flags_mini/AR_mini.png"> <!--flag tem width:25px!-->
+      <img src="Flags/flags_mini/BE_mini.png">
+      <img src="Flags/flags_mini/BR_mini.png">
+      <img src="Flags/flags_mini/CL_mini.png">
+      <img src="Flags/flags_mini/CN_mini.png">
+      <img src="Flags/flags_mini/CO_mini.png">
+      <img src="Flags/flags_mini/EC_mini.png">
+      <img src="Flags/flags_mini/GB_mini.png">
+      <img src="Flags/flags_mini/FR_mini.png">
+      <img src="Flags/flags_mini/DE_mini.png">
+      <img src="Flags/flags_mini/GR_mini.png">
+      <img src="Flags/flags_mini/IT_mini.png">
+      <img src="Flags/flags_mini/MX_mini.png">
+      <img src="Flags/flags_mini/NL_mini.png">
+      <img src="Flags/flags_mini/PY_mini.png">
+      <img src="Flags/flags_mini/PT_mini.png">
+      <img src="Flags/flags_mini/ES_mini.png">
+      <img src="Flags/flags_mini/SE_mini.png">
+      <img src="Flags/flags_mini/CH_mini.png">
+      <img src="Flags/flags_mini/UY_mini.png">
+      <img src="Flags/flags_mini/US_mini.png">
       <img src="escudos/brazilian_league/escudos_mini/flamengo_mini.png"> <!--escudo tem height:32px!-->
       <img src="escudos/brazilian_league/escudos_mini/vasco_mini.png">
       <img src="escudos/brazilian_league/escudos_mini/fluminense_mini.png">
