--- a/teams.html
+++ b/teams.html
@@ -115,10 +115,12 @@
 
 
 <div class="ter">
+    <span id="MapaSpan">
     <h1 style="color: black;margin:25px;">Select a Country to see the stocks available from that region</h1>
     <h4 style="color: black;margin:-20px 0 0 25px;">The darker the country, more teams it has</h4>
 
   <div id="map1" style="width: 90%; height: 60%; margin: 25px;"></div>
+  </span>
   <button style="margin:25px;" id="BackBtn" class="hidden">Back</button>
     <div id="ShowCountryTeamsDiv"></div>
     <div id="StockInfoDisplay" class="hidden"></div>
