--- a/teams.html
+++ b/teams.html
@@ -2,9 +2,11 @@
 <html>
   <script src="js/fbSDK.js"></script>
   <script src='js/jquery-3.1.1.min.js'></script>
+  <script src="js/teamsInfoAPI.js"></script>
   <script src="js/KryogenixSorttable.js"></script>
   <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
+  <script src="Chart.js-2.3.0/dist/Chart.bundle.js"></script>
   <link rel="stylesheet" href="css/teams.css">
   <link rel="stylesheet" media="all" href="VectorMap/jquery-jvectormap.css"/>
 
@@ -42,10 +44,9 @@
   <script src="VectorMap/map.js"></script>
 
   <script src="VectorMap/assets/jquery-jvectormap-world-mill-en.js"></script>
-  <script src="js/teamsRenderMap.js"></script>
-  <script src="js/teamsInfoAPI.js"></script>
-  <script src="js/teamsContent.js"></script>
   <script src="js/teams.js"></script>
+  <script src="js/teamsRenderMap.js"></script>
+  <script src="js/teamsContent.js"></script>
 
 <head>
     <meta charset="UTF-8">
