--- a/teams.html
+++ b/teams.html
@@ -124,7 +124,7 @@
   </span>
   <button style="margin:25px;" id="BackBtn" class="hidden">Back</button>
     <div id="ShowCountryTeamsDiv"></div>
-    <div id="StockInfoDisplay" style="width:90%;height:720px;margin:25px;background-color:#f5f7e1;" class="hidden">
+    <div id="StockInfoDisplay" class="hidden">
     </div>
 </div>
 
