--- a/teams.html
+++ b/teams.html
@@ -125,6 +125,17 @@
   <button style="margin:25px;" id="BackBtn" class="hidden">Back</button>
     <div id="ShowCountryTeamsDiv"></div>
     <div id="StockInfoDisplay" class="hidden">
+    <div id="headerInfo"></div>
+    <span class='StockInfoDisplaySpan'>Team Value: <span id="ValueStockInfoDisplay"></span> Billion Dollars</span>
+    <br><br>
+    <span class='StockInfoDisplaySpan'>Daily Volume: <span id="VolumeStockInfoDisplay"></span> Dollars</span>
+    <br><br>
+    <span class='StockInfoDisplaySpan'>Last 5 Games Change: <span id="5ChangeStockInfoDisplay"></span>%</span>
+    <br><br>
+    <span class='StockInfoDisplaySpan'>Stock Value: $<span id="StockStockInfoDisplay"></span></span>
+    <button style='float:right;margin:3% 3% 3% 1%;font-size:150%;color:white;background-color:#0aa046;padding:0.5%;'>BUY</button>
+    <button style='float:right;margin:3% 1% 3% 3%;font-size:150%;color:white;background-color:#dd5056;padding:0.5%;'>SELL</button>
+    <div id='StockInfoChartGraph' style='margin:2.5%;'><canvas id='canvasStockInfo' height='305%'></canvas></div>
     </div>
 </div>
 
