--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@
 <div style="clear:left;background-color:#f2f5f3; width:31%; height:30%;float:left;margin:1%;overflow:hidden;">
       <center><h1>Your Portfolio</h1></center>
       <div id="canvas-holder">
-        <canvas id="chart-area2" style="width:400px;float:center;"></canvas>
+        <canvas id="chart-area2" style="float:center;"></canvas>
     </div>
 </div>
 
