--- a/teams.html
+++ b/teams.html
@@ -63,7 +63,7 @@
       <li><a href="#">Portfolio</a></li>
       <li><a href="#">Your Firm</a></li>
       <li><a href="#">Next Games</a></li>
-      <li><a href="#">Rankings</a></li>
+      <li><a href="rankings">Rankings</a></li>
       <li><a href="#" class="icons"><i class="fa fa-cogs fa-2x icons" aria-hidden="true"></i></a></li>
       <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
       <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
