--- a/home.html
+++ b/home.html
@@ -24,30 +24,28 @@
       <li><a href="#">Your Firm</a></li>
       <li><a href="#">Next Games</a></li>
       <li><a href="rankings">Rankings</a></li>
-      <li><a href="#" class="icons"><i class="fa fa-cogs fa-2x icons" aria-hidden="true"></i></a></li>
-      <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
-      <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
+      <li><a href="#" class="icons"><i class="fa fa-cogs fa-2x icons" aria-hidden="true"></i></a><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
     </ul>
 
     <div class="ter">
 
 
-<div style="margin:1%;height:40%;width:63.85%;background-color:#f2f5f3;float:left;">
+<div style="margin:1vw;width:52vw;height:28vw;background-color:#f2f5f3;float:left;overflow:hidden;overflow-y:scroll;">
 <center><h1>Net Worth</h1></center>
 <button id="TodayChart">Today</button>
 <button id="WeekChart">Week</button>
 <button id="SemesterChart" class="ChartBtnActivated">Semester</button>
 <button id="YearChart">Year</button>
-  <div id="SemesterChartGraph" style="margin:20px;">
+  <div id="SemesterChartGraph" style="margin:0.4vw;">
         <canvas id="canvasNetWorthSemester" height="320%"></canvas>
     </div>
-  <div id="WeekChartGraph" style="margin:20px;">
+  <div id="WeekChartGraph" style="margin:0.4vw;">
         <canvas id="canvasNetWorthWeek" height="320%"></canvas>
     </div>
-  <div id="TodayChartGraph" style="margin:20px;">
+  <div id="TodayChartGraph" style="margin:0.4vw;">
         <canvas id="canvasNetWorthToday" height="320%"></canvas>
     </div>
-  <div id="YearChartGraph" style="margin:20px;">
+  <div id="YearChartGraph" style="margin:0.4vw;">
         <canvas id="canvasNetWorthYear" height="320%"></canvas>
     </div>
 </div>
@@ -58,7 +56,7 @@
 
 
 
-<div style="background-color:#f2f5f3; width:31%; height:40%;overflow:hidden;overflow-y:scroll;margin:1%;float:left;">
+<div style="background-color:#f2f5f3;width:25vw;height:28vw;overflow:hidden;overflow-y:scroll;margin:1vw;float:left;">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>NEWS</h1></center>
 <br>
 <div style="margin:12px;">
@@ -74,14 +72,14 @@
 
 
 
-<div style="clear:left;background-color:#f2f5f3; width:31%; height:30%;float:left;margin:1%;overflow:hidden;">
+<div style="clear:left;background-color:#f2f5f3;width:25vw;height:25vw;float:left;margin:1vw;overflow:hidden;overflow-y:scroll;">
       <center><h1>Your Portfolio</h1></center>
-      <div id="canvas-holder">
+      <div id="canvas-holder" style="width:100%;">
         <canvas id="chart-area2" style="float:center;"></canvas>
     </div>
 </div>
 
-<div style="background-color:#f2f5f3; width:31%; height:30%;float:left;overflow:hidden;overflow-y:scroll;margin:1%;">
+<div style="background-color:#f2f5f3;width:25vw;height:25vw;float:left;overflow:hidden;overflow-y:scroll;margin:1vw;">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Last Games</h1></center>
 <table>
 <tbody> 
@@ -125,7 +123,7 @@
 
 
 
-<div style="background-color:#f2f5f3; width:31%; float:left; height:30%; overflow:hidden;overflow-y:scroll;overflow-x:auto;margin: 1%;">
+<div style="background-color:#f2f5f3;width:25vw;height:25vw;float:left;overflow:hidden;overflow-y:scroll;overflow-x:auto;margin: 1%;">
 <center style="background:#1b1e24;padding:10px;color:#C1C3D1;"><h1>Today's Top 20 Changes</h1></center>
 <table>
 <thead>
