--- a/home.html
+++ b/home.html
@@ -24,7 +24,13 @@
       <li><a href="#">Your Firm</a></li>
       <li><a href="#">Next Games</a></li>
       <li><a href="rankings">Rankings</a></li>
-      <li><a href="#" class="icons"><i class="fa fa-cogs fa-2x icons" aria-hidden="true"></i></a><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
+      <li>
+        <center>
+          <i class="fa fa-cogs fa-3x icons" aria-hidden="true"></i>
+          <i class="fa fa-suitcase fa-3x icons" aria-hidden="true"></i>
+          <i class="fa fa-moon-o fa-3x icons" aria-hidden="true"></i>
+        </center>
+      </li>
     </ul>
 
     <div class="ter">
