--- a/home.html
+++ b/home.html
@@ -26,9 +26,9 @@
       <li><a href="rankings">Rankings</a></li>
       <li>
         <center>
-          <i class="fa fa-cogs fa-3x icons" aria-hidden="true"></i>
-          <i class="fa fa-suitcase fa-3x icons" aria-hidden="true"></i>
-          <i class="fa fa-moon-o fa-3x icons" aria-hidden="true"></i>
+          <i class="fa fa-cogs icons" aria-hidden="true"></i>
+          <i class="fa fa-suitcase icons" aria-hidden="true"></i>
+          <i class="fa fa-moon-o icons" aria-hidden="true"></i>
         </center>
       </li>
     </ul>
