--- a/rankings.html
+++ b/rankings.html
@@ -21,9 +21,13 @@
       <li><a href="#">Your Firm</a></li>
       <li><a href="#">Next Games</a></li>
       <li><a class="active" href="rankings">Rankings</a></li>
-      <li><a href="#" class="icons"><i class="fa fa-cogs fa-2x icons" aria-hidden="true"></i></a></li>
-      <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
-      <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
+      <li>
+        <center>
+          <i class="fa fa-cogs icons" aria-hidden="true"></i>
+          <i class="fa fa-suitcase icons" aria-hidden="true"></i>
+          <i class="fa fa-moon-o icons" aria-hidden="true"></i>
+        </center>
+      </li>
     </ul>
 
   <div class="ter">
