--- a/teams.html
+++ b/teams.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="css/teams.css">
   <link rel="stylesheet" media="all" href="VectorMap/jquery-jvectormap.css"/>
 
+
+
   <script src="VectorMap/assets/jquery-1.8.2.js"></script>
   <script src="VectorMap/jquery-jvectormap.js"></script>
   <script src="VectorMap/jquery-mousewheel.js"></script>
@@ -64,9 +66,13 @@
       <li><a href="#">Your Firm</a></li>
       <li><a href="#">Next Games</a></li>
       <li><a href="rankings">Rankings</a></li>
-      <li><a href="#" class="icons"><i class="fa fa-cogs fa-2x icons" aria-hidden="true"></i></a></li>
-      <li><a href="#" class="icons"><i class="fa fa-suitcase fa-2x icons" aria-hidden="true"></i></a></li>
-      <li><a href="#" class="icons"><i class="fa fa-moon-o fa-2x icons" aria-hidden="true"></i></a></li>
+      <li>
+        <center>
+          <i class="fa fa-cogs icons" aria-hidden="true"></i>
+          <i class="fa fa-suitcase icons" aria-hidden="true"></i>
+          <i class="fa fa-moon-o icons" aria-hidden="true"></i>
+        </center>
+      </li>
     </ul>
     <div class="hidden">   <!--div para pre-load todas as mini_flag!-->
       <img src="escudos/escudos_mini/AR_mini.png"> <!--flag tem width:25px!-->
