--- a/rankings.html
+++ b/rankings.html
@@ -15,19 +15,13 @@
       <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
       <li><center id="resposta"></center></li>
       <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
-      <li><a href="home">Home</a></li>
-      <li><a href="teams">Teams</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Your Firm</a></li>
-      <li><a href="#">Next Games</a></li>
-      <li><a class="active" href="rankings">Rankings</a></li>
-      <li>
-        <center>
-          <i class="fa fa-cogs icons" aria-hidden="true"></i>
-          <i class="fa fa-suitcase icons" aria-hidden="true"></i>
-          <i class="fa fa-moon-o icons" aria-hidden="true"></i>
-        </center>
-      </li>
+      <li><a class="fa fa-home" href="home"> <span class="fontsf">Home</span></a></li>
+      <li><a class="fa fa-globe" href="teams"> <span class="fontsf">Teams</span></a></li>
+      <li><a class="fa fa-pie-chart" href="#"> <span class="fontsf">Portfolio</span></a></li>
+      <li><a class="fa fa-suitcase" href="#"> <span class="fontsf">Your Firm</span></a></li>
+      <li><a class="fa fa-list active" href="rankings"> <span class="fontsf">Rankings</span></a></li>
+      <li><a class="fa fa-shopping-cart" href="#"> <span class="fontsf">Store</span></a></li>
+      <li><a class="fa fa-cogs" href="#"> <span class="fontsf">Settings</span></a></li>
     </ul>
 
   <div class="ter">
