--- a/rankings.html
+++ b/rankings.html
@@ -19,13 +19,13 @@
       <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
       <li><center id="resposta"></center></li>
       <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
-      <li><a class="fa fa-home" href="home"> <span class="fontsf">Home</span></a></li>
-      <li><a class="fa fa-globe" href="teams"> <span class="fontsf">Teams</span></a></li>
-      <li><a class="fa fa-pie-chart" href="#"> <span class="fontsf">Portfolio</span></a></li>
-      <li><a class="fa fa-suitcase" href="#"> <span class="fontsf">Your Firm</span></a></li>
-      <li><a class="fa fa-list active" href="rankings"> <span class="fontsf">Rankings</span></a></li>
-      <li><a class="fa fa-shopping-cart" href="#"> <span class="fontsf">Store</span></a></li>
-      <li><a class="fa fa-cogs" href="#"> <span class="fontsf">Settings</span></a></li>
+      <li><a class="fa fa-home centerize" href="home"> <span class="fontsf">Home</span></a></li>
+      <li><a class="fa fa-globe centerize" href="teams"> <span class="fontsf">Teams</span></a></li>
+      <li><a class="fa fa-pie-chart centerize" href="#"> <span class="fontsf">Portfolio</span></a></li>
+      <li><a class="fa fa-suitcase centerize" href="#"> <span class="fontsf">Your Firm</span></a></li>
+      <li><a class="fa fa-list active centerize" href="rankings"> <span class="fontsf">Rankings</span></a></li>
+      <li><a class="fa fa-shopping-cart centerize" href="#"> <span class="fontsf">Store</span></a></li>
+      <li><a class="fa fa-cogs centerize" href="#"> <span class="fontsf">Settings</span></a></li>
     </ul>
 
   <div class="ter">
