--- a/rankings.html
+++ b/rankings.html
@@ -15,10 +15,14 @@
     <title>FUT MARKET</title>
 </head>
 <body>
+<div>
     <ul>
-      <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
-      <li><center id="resposta"></center></li>
-      <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
+      <li><img src="futmarket_letreiro.png" style="width:70%;padding:15px;"></li>
+      <li style="float:right;" id="resposta"></li>
+    </ul>
+</div>
+<div>
+    <ul>
       <li><a class="fa fa-home centerize" href="home"> <span class="fontsf">Home</span></a></li>
       <li><a class="fa fa-globe centerize" href="teams"> <span class="fontsf">Teams</span></a></li>
       <li><a class="fa fa-pie-chart centerize" href="#"> <span class="fontsf">Portfolio</span></a></li>
@@ -27,15 +31,14 @@
       <li><a class="fa fa-shopping-cart centerize" href="#"> <span class="fontsf">Store</span></a></li>
       <li><a class="fa fa-cogs centerize" href="#"> <span class="fontsf">Settings</span></a></li>
     </ul>
+</div>
 
-  <div class="ter">
   <center style="font-size:70px;">RANKING</center>
   <center><button style="padding:5px;margin:5px;" class="activebtn" id="STKBRKSBTN">STOCKBROKERS</button><button style="padding:5px;margin:5px;" id="FIRMBTN">FIRMS</button></center>
   <br><br>
   <div id="RankingsPeopleTableFull">
   </div>
   <div id="RankingsFirmTableFull" class="hidden">
-  </div>
   </div>
 
  </body>
