--- a/rankings.html
+++ b/rankings.html
@@ -17,11 +17,9 @@
 <body>
 <div>
     <ul>
-      <li><img src="futmarket_letreiro.png" style="width:70%;padding:15px;"></li>
+      <li><img src="futmarket_letreiro.png" style="width:45%;margin:15px;"></li>
       <li style="float:right;" id="resposta"></li>
     </ul>
-</div>
-<div>
     <ul>
       <li><a class="fa fa-home centerize" href="home"> <span class="fontsf">Home</span></a></li>
       <li><a class="fa fa-globe centerize" href="teams"> <span class="fontsf">Teams</span></a></li>
