--- a/rankings.html
+++ b/rankings.html
@@ -17,7 +17,7 @@
 <body>
 <div>
     <ul>
-      <li><img src="futmarket_letreiro.png" style="width:45%;margin:15px;"></li>
+      <li><img src="futmarket_letreiro.png" style="width:45%;margin:15px 15px 0 15px;"></li>
       <li style="float:right;" id="resposta"></li>
     </ul>
     <ul>
