--- a/rankings.html
+++ b/rankings.html
@@ -18,7 +18,7 @@
 <div>
     <ul>
       <li><img src="futmarket_letreiro.png" style="width:45%;margin:15px 15px 0 15px;"></li>
-      <li style="float:right;" id="resposta"></li>
+      <li style="float:right;max-width:45%;" id="resposta"></li>
     </ul>
     <ul>
       <li><a class="fa fa-home centerize" href="home"> <span class="fontsf">Home</span></a></li>
