--- a/rankings.html
+++ b/rankings.html
@@ -19,6 +19,7 @@
     <ul>
       <li><img src="futmarket_letreiro.png" style="width:45%;margin:15px 15px 0 15px;"></li>
       <li style="float:right;max-width:45%;" id="resposta"></li>
+      <li><a href="#" id="resposta1"></a></li>
     </ul>
     <ul>
       <li><a class="fa fa-home centerize" href="home"> <span class="fontsf">Home</span></a></li>
