--- a/rankings.html
+++ b/rankings.html
@@ -18,10 +18,10 @@
 <div>
     <ul>
       <li><img src="futmarket_letreiro.png" style="width:45%;margin:15px 15px 0 15px;"></li>
-      <li style="float:right;max-width:45%;" id="resposta"></li>
-      <li><a href="#" id="resposta1"></a></li>
+      <li style="float:right;" id="resposta"></li>
+      <li><a href="#" id="resposta1" style="float:right;"></a></li>
     </ul>
-    <ul>
+    <center><ul>
       <li><a class="fa fa-home centerize" href="home"> <span class="fontsf">Home</span></a></li>
       <li><a class="fa fa-globe centerize" href="teams"> <span class="fontsf">Teams</span></a></li>
       <li><a class="fa fa-pie-chart centerize" href="#"> <span class="fontsf">Portfolio</span></a></li>
@@ -29,7 +29,7 @@
       <li><a class="fa fa-list active centerize" href="rankings"> <span class="fontsf">Rankings</span></a></li>
       <li><a class="fa fa-shopping-cart centerize" href="#"> <span class="fontsf">Store</span></a></li>
       <li><a class="fa fa-cogs centerize" href="#"> <span class="fontsf">Settings</span></a></li>
-    </ul>
+    </ul></center>
 </div>
 
   <center style="font-size:70px;">RANKING</center>
