--- a/rankings.html
+++ b/rankings.html
@@ -19,7 +19,7 @@
     <ul>
       <li><img src="futmarket_letreiro.png" style="width:45%;margin:15px 15px 0 15px;"></li>
       <li style="float:right;" id="resposta"></li>
-      <li style="float:right;" id="resposta1"></li>
+      <li id="resposta1"></li>
     </ul>
     <div style="text-align: center;">
    <ul style="display: inline-block;">
