--- a/rankings.html
+++ b/rankings.html
@@ -16,10 +16,10 @@
 </head>
 <body>
 
-    <ul>
+    <ul style="display: block;">
       <li><img src="futmarket_letreiro.png" style="width:45%;margin:15px 15px 0 15px;"></li>
-      <li style="float:right;margin:15px 15px 0 15px;" id="resposta1"></li>
-      <li style="float:right;" id="resposta"></li>
+      <li style="float:right;margin:15px 15px 0 -0.1vw;" id="resposta1"></li>
+      <li style="float:right;size:normal;" id="resposta"><img src="4243255.png" style="width:45%;margin:15px 15px 0 15px;"></li>
     </ul>
     <div style="text-align: center;">
    <ul style="display: inline-block;">
