--- a/home.html
+++ b/home.html
@@ -14,27 +14,22 @@
     <title>FUT MARKET</title>
 </head>
 <body>
-    <ul>
-      <li><input id="myInp" type="text" name="search" placeholder="Search.."></li>
-      <li><center id="resposta"></center></li>
-      <li><h3><center><a href="#" id="resposta1"></a></center></h3></li>
-      <li><a class="active" href="home">Home</a></li>
-      <li><a href="teams">Teams</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Your Firm</a></li>
-      <li><a href="#">Next Games</a></li>
-      <li><a href="rankings">Rankings</a></li>
-      <li>
-        <center>
-          <i class="fa fa-cogs icons" aria-hidden="true"></i>
-          <i class="fa fa-suitcase icons" aria-hidden="true"></i>
-          <i class="fa fa-moon-o icons" aria-hidden="true"></i>
-        </center>
-      </li>
+       <ul style="display: block;">
+      <li><img src="futmarket_letreiro.png" style="width:45%;margin:15px 15px 0 15px;"></li>
+      <li style="float:right;margin:15px 15px 0 15px;" id="resposta1"></li>
+      <li style="float:right;" id="resposta"></li>
     </ul>
-
-    <div class="ter">
-
+<div style="text-align: center;">
+   <ul style="display: inline-block;">
+      <li><a class="fa fa-home centerize" href="home"> <span class="fontsf">Home</span></a></li>
+      <li><a class="fa fa-globe centerize" href="teams"> <span class="fontsf">Teams</span></a></li>
+      <li><a class="fa fa-pie-chart centerize" href="#"> <span class="fontsf">Portfolio</span></a></li>
+      <li><a class="fa fa-suitcase centerize" href="#"> <span class="fontsf">Your Firm</span></a></li>
+      <li><a class="fa fa-list active centerize" href="rankings"> <span class="fontsf">Rankings</span></a></li>
+      <li><a class="fa fa-shopping-cart centerize" href="#"> <span class="fontsf">Store</span></a></li>
+      <li><a class="fa fa-cogs centerize" href="#"> <span class="fontsf">Settings</span></a></li>
+    </ul>
+</div>
 
 <div style="margin:1vw;width:52vw;height:28vw;background-color:#f2f5f3;float:left;overflow:hidden;overflow-y:scroll;">
 <center><h1>Net Worth</h1></center>
