--- a/teams.html
+++ b/teams.html
@@ -125,7 +125,9 @@
   </span>
   <button style="margin:25px;" id="BackBtn" class="hidden">Back</button>
     <div id="ShowCountryTeamsDiv"></div>
-    <div id="StockInfoDisplay" class="hidden">
+    <center>
+        <div id="StockInfoDisplay" class="hidden" style="background-color:#e7ead0;max-height:40%;max-width:80%; ">
+        <div style="text-align:left;margin-left:25px;">
     <div id="headerInfo"></div>
     <span class='StockInfoDisplaySpan'>Team Value: <span id="ValueStockInfoDisplay"></span> Billion Dollars</span>
     <br><br>
@@ -136,8 +138,9 @@
     <span class='StockInfoDisplaySpan'>Stock Value: $<span id="StockStockInfoDisplay"></span></span>
     <button style='float:right;margin:3% 3% 3% 1%;font-size:150%;color:white;background-color:#0aa046;padding:0.5%;'>BUY</button>
     <button style='float:right;margin:3% 1% 3% 3%;font-size:150%;color:white;background-color:#dd5056;padding:0.5%;'>SELL</button>
-    <div id='StockInfoChartGraph' style='margin:2.5%;'><canvas id='canvasStockInfo' height='305%'></canvas></div>
-    </div>
+    <div id='StockInfoChartGraph' style='margin:2.5%;'><canvas id='canvasStockInfo' height='305%'></canvas></div></div>
+        </div>
+    </center>
 
 
 </body>
