--- a/teams.html
+++ b/teams.html
@@ -4,6 +4,7 @@
   <script src='js/jquery-3.1.1.min.js'></script>
   <script src="js/teamsInfoAPI.js"></script>
   <script src="js/KryogenixSorttable.js"></script>
+  <script src="js/p2p.js"></script>
   <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
   <script src="Chart.js-2.3.0/dist/Chart.bundle.js"></script>
@@ -139,6 +140,28 @@
     <button style='float:right;margin:3% 3% 3% 1%;font-size:150%;color:white;background-color:#0aa046;padding:0.5%;'>BUY</button>
     <button style='float:right;margin:3% 1% 3% 3%;font-size:150%;color:white;background-color:#dd5056;padding:0.5%;'>SELL</button>
     <div id='StockInfoChartGraph' style='margin:2.5%;'><canvas id='canvasStockInfo' height='305%'></canvas></div></div>
+    <ul>
+<table>
+  <tbody>
+    <tr>
+      <td>User</td>
+      <td><input id="user"/></td>
+    </tr>
+    <tr>
+      <td>Amount (ETH)</td>
+      <td><input id="amount"/></td>
+    </tr>
+    <tr>
+      <td>Price (BTC/ETH)</td>
+      <td><input id="price"/></td>
+    </tr>
+  </tbody>
+</table>
+</ul>
+<button id="buy">Buy</button>
+<button id="sell">Sell</button>
+<textarea cols=100 rows=20 id="book"></textarea>
+<div id="trades"></div>
         </div>
     </center>
 
@@ -146,9 +169,14 @@
 </body>
 <script type="text/javascript">
 	window.onload = function() {
-      getPic2();
-      getName();
-      getName2();
+      getPic2(); //script do fbSDK.js
+      getName(); //script do fbSDK.js
+      getName2(); //script do fbSDK.js
+      ["buy","sell"].map(function(c){ //script do p2p.js
+    get(c).onclick = function(){
+      cmd(c)(get("user").value, Number(get("amount").value), Number(get("price").value));
+    };
+  });
   };
 </script>
 </html>
