--- a/home.html
+++ b/home.html
@@ -21,11 +21,11 @@
     </ul>
 <div style="text-align: center;">
    <ul style="display: inline-block;">
-      <li><a class="fa fa-home centerize" href="home"> <span class="fontsf">Home</span></a></li>
+      <li><a class="fa fa-home active centerize" href="home"> <span class="fontsf">Home</span></a></li>
       <li><a class="fa fa-globe centerize" href="teams"> <span class="fontsf">Teams</span></a></li>
       <li><a class="fa fa-pie-chart centerize" href="#"> <span class="fontsf">Portfolio</span></a></li>
       <li><a class="fa fa-suitcase centerize" href="#"> <span class="fontsf">Your Firm</span></a></li>
-      <li><a class="fa fa-list active centerize" href="rankings"> <span class="fontsf">Rankings</span></a></li>
+      <li><a class="fa fa-list centerize" href="rankings"> <span class="fontsf">Rankings</span></a></li>
       <li><a class="fa fa-shopping-cart centerize" href="#"> <span class="fontsf">Store</span></a></li>
       <li><a class="fa fa-cogs centerize" href="#"> <span class="fontsf">Settings</span></a></li>
     </ul>
