--- a/teams.html
+++ b/teams.html
@@ -175,6 +175,7 @@ function changeValue(value) {
       getPic2(); //script do fbSDK.js
       getName(); //script do fbSDK.js
       nameFBuser = getNameforUser();
+      alert(nameFBuser);
       changeValue(nameFBuser);
       getName2(); //script do fbSDK.js
       ["buy","sell"].map(function(c){ //script do p2p.js
