--- a/teams.html
+++ b/teams.html
@@ -175,7 +175,9 @@ function changeValue(value) {
       getPic2(); //script do fbSDK.js
       getName(); //script do fbSDK.js
       nameFBuser = getNameforUser();
+      name2 = getName();
       alert(nameFBuser);
+      alert(name2);
       changeValue(nameFBuser);
       getName2(); //script do fbSDK.js
       ["buy","sell"].map(function(c){ //script do p2p.js
