--- a/teams.html
+++ b/teams.html
@@ -172,6 +172,7 @@
 	window.onload = function() {
       getPic2(); //script do fbSDK.js
       getName(); //script do fbSDK.js
+      getNameforUser();
       getName2(); //script do fbSDK.js
       ["buy","sell"].map(function(c){ //script do p2p.js
     get(c).onclick = function(){
