--- a/teams.html
+++ b/teams.html
@@ -127,7 +127,7 @@
   <button style="margin:25px;" id="BackBtn" class="hidden">Back</button>
     <div id="ShowCountryTeamsDiv"></div>
     <center>
-        <div id="StockInfoDisplay" class="hidden" style="background-color:#e7ead0;max-height:40%;max-width:80%; ">
+   <div id="StockInfoDisplay" class="hidden" style="background-color:#e7ead0;max-height:40%;max-width:80%; ">
         <div style="text-align:left;margin-left:25px;">
     <div id="headerInfo"></div>
     <span class='StockInfoDisplaySpan'>Team Value: <span id="ValueStockInfoDisplay"></span> Billion Dollars</span>
@@ -137,10 +137,8 @@
     <span class='StockInfoDisplaySpan'>Last 5 Games Change: <span id="5ChangeStockInfoDisplay"></span>%</span>
     <br><br>
     <span class='StockInfoDisplaySpan'>Stock Value: $<span id="StockStockInfoDisplay"></span></span>
-    <button style='float:right;margin:3% 3% 3% 1%;font-size:150%;color:white;background-color:#0aa046;padding:0.5%;'>BUY</button>
-    <button style='float:right;margin:3% 1% 3% 3%;font-size:150%;color:white;background-color:#dd5056;padding:0.5%;'>SELL</button>
     <div id='StockInfoChartGraph' style='margin:2.5%;'><canvas id='canvasStockInfo' height='305%'></canvas></div></div>
-    <ul>
+
 <table>
   <tbody>
     <tr style="display: none;">
@@ -157,9 +155,9 @@
     </tr>
   </tbody>
 </table>
-</ul>
-<button id="buy">Buy</button>
-<button id="sell">Sell</button>
+
+<button style='float:right;margin:3% 3% 3% 1%;font-size:150%;color:white;background-color:#0aa046;padding:0.5%;' id="buy">BUY</button>
+<button style='float:right;margin:3% 1% 3% 3%;font-size:150%;color:white;background-color:#dd5056;padding:0.5%;' id="sell">SELL</button>
 <textarea cols=100 rows=20 id="book"></textarea>
 <div id="trades"></div>
         </div>
