--- a/mine.html
+++ b/mine.html
@@ -13,6 +13,7 @@
 			<thead>
 			  <tr style="font-size:28px;">
 			    <th>NAME</th> 
+			    <th>PRICE(BTC)</th> 
 			    <th>CHANGE</th> 
 			  </tr>
 			</thead>
@@ -21,12 +22,16 @@
 			    <td>
 			    	Bitcoin (BTC)
 			    </td>
+			    <td id="bitcoin-price">
+			    </td>
 			    <td id="bitcoin">
 			    </td>
 			  </tr>
 			  <tr>
 			    <td>
 			    	Ethereum (ETH)
+			    </td>
+			    <td id="ethereum-price">
 			    </td>
 			    <td id="ethereum">
 			    </td>
@@ -35,12 +40,16 @@
 			    <td>
 			    	Decred (DCR)
 			    </td>
+			    <td id="decred-price">
+			    </td>
 			    <td id="decred">
 			    </td>
 			  </tr>
 			  <tr>
 			    <td>
 			    	Shift (SHIFT)
+			    </td>
+			    <td id="shift-price">
 			    </td>
 			    <td id="shift">
 			    </td>
@@ -49,12 +58,16 @@
 			    <td>
 			    	Ubiq (UBQ)
 			    </td>
+			    <td id="ubiq-price">
+			    </td>
 			    <td id="ubiq">
 			    </td>
 			  </tr>
 			  <tr>
 			    <td>
 			    	DigixDAO (DGD)
+			    </td>
+			    <td id="digixdao-price">
 			    </td>
 			    <td id="digixdao">
 			    </td>
@@ -63,12 +76,16 @@
 			    <td>
 			    	Zcash (ZEC)
 			    </td>
+			    <td id="zcash-price">
+			    </td>
 			    <td id="zcash">
 			    </td>
 			  </tr>
 			  <tr>
 			    <td>
 			    	Counterparty (XCP)
+			    </td>
+			    <td id="counterparty-price">
 			    </td>
 			    <td id="counterparty">
 			    </td>
@@ -77,12 +94,16 @@
 			    <td>
 			    	Chronobank (TIME)
 			    </td>
+			    <td id="chronobank-price">
+			    </td>
 			    <td id="chronobank">
 			    </td>
 			  </tr>
 			  <tr>
 			    <td>
 			    	Storjcoin X (SJCX)
+			    </td>
+			    <td id="storjcoin-x-price">
 			    </td>
 			    <td id="storjcoin-x">
 			    </td>
@@ -91,12 +112,16 @@
 			    <td>
 			    	Wings (WINGS)
 			    </td>
+			    <td id="wings-price">
+			    </td>
 			    <td id="wings">
 			    </td>
 			  </tr>
 			  <tr>
 			    <td>
 			    	Golem (GNT)
+			    </td>
+			    <td id="golem-network-tokens-price">
 			    </td>
 			    <td id="golem-network-tokens">
 			    </td>
