--- a/mine.html
+++ b/mine.html
@@ -8,7 +8,7 @@
 		<script src="js/mine.js"></script>
 
 	<body>
-		<div>
+		<div style="margin:1vw;width:38.5vw;height:28vw;background-color:#f2f5f3;float:left;overflow:scroll;">
 			<table>
 			<thead>
 			  <tr style="font-size:28px;">
@@ -128,6 +128,16 @@
 			  </tr>
 			</tbody>
 			</table>
+		</div>
+
+		<div style="background-color:#f2f5f3;width:38.5vw;height:28vw;overflow:scroll;margin:1vw;float:left;">
+		<center style="background:#1b1e24;padding:3px;color:#C1C3D1;"><h1>PEDRO</h1></center>
+		</div>
+
+		<div style="clear:left;background-color:#f2f5f3;width:38.5vw;height:25vw;float:left;margin:1vw;overflow:scroll;">
+		</div>
+
+		<div style="background-color:#f2f5f3;width:38.5vw;height:25vw;float:left;overflow:scroll;margin:1vw;">
 		</div>
 	</body>
 
