--- a/mine.html
+++ b/mine.html
@@ -13,7 +13,7 @@
 			<thead>
 			  <tr style="font-size:28px;">
 			    <th>NAME</th> 
-			    <th>PRICE(BTC)</th> 
+			    <th>PRICE</th> 
 			    <th>CHANGE</th> 
 			  </tr>
 			</thead>
@@ -43,6 +43,15 @@
 			    <td id="decred-price">
 			    </td>
 			    <td id="decred">
+			    </td>
+			  </tr>
+			  <tr>
+			    <td>
+			    	Ripple (XRP)
+			    </td>
+			    <td id="ripple-price">
+			    </td>
+			    <td id="ripple">
 			    </td>
 			  </tr>
 			  <tr>
@@ -132,6 +141,67 @@
 
 		<div style="background-color:#f2f5f3;width:38.5vw;height:28vw;overflow:scroll;margin:1vw;float:left;">
 		<center style="background:#1b1e24;padding:3px;color:#C1C3D1;"><h1>PEDRO</h1></center>
+		<table>
+			<thead>
+			  <tr style="font-size:28px;">
+			    <th>NAME</th> 
+			    <th>AMOUNT</th> 
+			    <th>TOTAL</th> 
+			  </tr>
+			</thead>
+			<tbody>
+			  <tr>
+			    <td>
+			    	Decred (DCR)
+			    </td>
+			    <td id="decred-amount">
+			    	1975.75017
+			    </td>
+			    <td id="decred-total">
+			    </td>
+			  </tr>
+			  <tr>
+			    <td>
+			    	Ethereum (ETH)
+			    </td>
+			    <td id="ethereum-amount">
+			    	115.873547
+			    </td>
+			    <td id="ethereum-total">
+			    </td>
+			  </tr>
+			  <tr>
+			    <td>
+			    	Bitcoin (BTC)
+			    </td>
+			    <td id="bitcoin-amount">
+			    	0.50474772
+			    </td>
+			    <td id="bitcoin-total">
+			    </td>
+			  </tr>
+			  <tr>
+			    <td>
+			    	SHIFT (SHIFT)
+			    </td>
+			    <td id="shift-amount">
+			    	3103.76386
+			    </td>
+			    <td id="shift-total">
+			    </td>
+			  </tr>
+			  <tr>
+			    <td>
+			    	Ubiq (UBQ)
+			    </td>
+			    <td id="ubiq-amount">
+			    	1611.000000
+			    </td>
+			    <td id="ubiq-total">
+			    </td>
+			  </tr>
+			</tbody>
+		</table>
 		</div>
 
 		<div style="clear:left;background-color:#f2f5f3;width:38.5vw;height:25vw;float:left;margin:1vw;overflow:scroll;">
