--- a/mine.html
+++ b/mine.html
@@ -6,9 +6,10 @@
 
 		<script src='js/jquery-3.1.1.min.js'></script>
 		<script src="js/mine.js"></script>
+		<link rel="stylesheet" href="css/mine.css">
 
 	<body>
-		<div style="margin:1vw;width:38.5vw;height:28vw;background-color:#f2f5f3;float:left;overflow:scroll;">
+		<div style="margin:1vw;background-color:#f2f5f3;float:left;">
 			<table>
 			<thead>
 			  <tr style="font-size:28px;">
@@ -139,75 +140,77 @@
 			</table>
 		</div>
 
-		<div style="background-color:#f2f5f3;width:38.5vw;height:28vw;overflow:scroll;margin:1vw;float:left;">
-		<center style="background:#1b1e24;padding:3px;color:#C1C3D1;"><h1>PEDRO</h1></center>
-		<table>
-			<thead>
-			  <tr style="font-size:28px;">
-			    <th>NAME</th> 
-			    <th>AMOUNT</th> 
-			    <th>TOTAL</th> 
-			  </tr>
-			</thead>
-			<tbody>
-			  <tr>
-			    <td>
-			    	Decred (DCR)
-			    </td>
-			    <td id="decred-amount">
-			    	1975.75017
-			    </td>
-			    <td id="decred-total">
-			    </td>
-			  </tr>
-			  <tr>
-			    <td>
-			    	Ethereum (ETH)
-			    </td>
-			    <td id="ethereum-amount">
-			    	115.873547
-			    </td>
-			    <td id="ethereum-total">
-			    </td>
-			  </tr>
-			  <tr>
-			    <td>
-			    	Bitcoin (BTC)
-			    </td>
-			    <td id="bitcoin-amount">
-			    	0.50474772
-			    </td>
-			    <td id="bitcoin-total">
-			    </td>
-			  </tr>
-			  <tr>
-			    <td>
-			    	SHIFT (SHIFT)
-			    </td>
-			    <td id="shift-amount">
-			    	3103.76386
-			    </td>
-			    <td id="shift-total">
-			    </td>
-			  </tr>
-			  <tr>
-			    <td>
-			    	Ubiq (UBQ)
-			    </td>
-			    <td id="ubiq-amount">
-			    	1611.000000
-			    </td>
-			    <td id="ubiq-total">
-			    </td>
-			  </tr>
-			</tbody>
-		</table>
+		<div style="background-color:#f2f5f3;margin:1vw;float:left;">
+  				<div id='Pname' onclick="hide();">Pedro</div>
+  			<div id='Ptable'>
+				<table>
+					<thead>
+					  <tr style="font-size:28px;">
+					    <th>NAME</th> 
+					    <th>AMOUNT</th> 
+					    <th>TOTAL</th> 
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr>
+					    <td>
+					    	Decred (DCR)
+					    </td>
+					    <td id="decred-amount">
+					    	1977.17946
+					    </td>
+					    <td id="decred-total">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Ethereum (ETH)
+					    </td>
+					    <td id="ethereum-amount">
+					    	115.873547
+					    </td>
+					    <td id="ethereum-total">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Bitcoin (BTC)
+					    </td>
+					    <td id="bitcoin-amount">
+					    	0.50474772
+					    </td>
+					    <td id="bitcoin-total">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	SHIFT (SHIFT)
+					    </td>
+					    <td id="shift-amount">
+					    	3103.76386
+					    </td>
+					    <td id="shift-total">
+					    </td>
+					  </tr>
+					  <tr>
+					    <td>
+					    	Ubiq (UBQ)
+					    </td>
+					    <td id="ubiq-amount">
+					    	1611.000000
+					    </td>
+					    <td id="ubiq-total">
+					    </td>
+					  </tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 
-		<div style="clear:left;background-color:#f2f5f3;width:38.5vw;height:25vw;float:left;margin:1vw;overflow:scroll;">
+		<div style="clear:left;background-color:#f2f5f3;float:left;margin:1vw;">
 		</div>
 
-		<div style="background-color:#f2f5f3;width:38.5vw;height:25vw;float:left;overflow:scroll;margin:1vw;">
+		<div style="background-color:#f2f5f3;float:left;margin:1vw;">
 		</div>
 	</body>
 
